@@ -20,9 +20,9 @@ version = scmVersion.version
 
 allprojects {
 	repositories {
+		mavenLocal()
 		mavenCentral()
 		jcenter()
-		mavenLocal()
 	}
 
 	apply plugin: 'extend-project'
@@ -50,7 +50,7 @@ subprojects {
 	}
 
 	plugins.withType( JavaPlugin ) {
-		project.apply plugin: 'org.galaxx.gradle.jandex'
+//		project.apply plugin: 'org.galaxx.gradle.jandex'
 
 		sourceCompatibility = '8'
 		targetCompatibility = '8'
@@ -64,19 +64,16 @@ subprojects {
 		}
 
 		dependencies {
-			implementation platform( 'org.eclipse.microprofile:microprofile:3.1' )
-			implementation platform( 'com.fasterxml.jackson:jackson-bom:2.9.10' )
 			implementation platform( 'org.apache.deltaspike.distribution:distributions-bom:1.9.1' )
 			implementation platform( 'io.smallrye:smallrye-bom:3.0.2' )
-
-			implementation platform( 'org.hibernate.ogm:hibernate-ogm-bom:5.4.1.Final' )
 
 			implementation platform( 'ascelion.flywaydb:flywaydb-ext:1.0.2' )
 			implementation platform( 'ascelion.mp-config:mp-config-ext:1.0.0-SNAPSHOT' )
 
-			implementation platform( 'org.jboss.weld:weld-core-bom:3.1.2.Final' )
-			implementation platform( 'io.undertow:undertow-parent:2.0.27.Final' )
-			implementation platform( 'org.glassfish.jersey:jersey-bom:2.29.1' )
+			// https://github.com/oracle/helidon/issues/1121
+			// https://github.com/pa314159/helidon/tree/issues/1121
+			implementation platform( 'io.helidon.microprofile.bundles:helidon-microprofile-3.0:1.3.2-SNAPSHOT' )
+			// implementation platform( 'org.glassfish.jersey:jersey-bom:2.29.1' )
 
 			constraints {
 				implementation 'jakarta.enterprise:jakarta.enterprise.cdi-api:2.0.2'
@@ -88,7 +85,6 @@ subprojects {
 				implementation 'jakarta.json.bind:jakarta.json.bind-api:1.0.2'
 
 				implementation 'org.slf4j:slf4j-api:1.7.28'
-				implementation 'org.slf4j:slf4j-jdk14:1.7.28'
 
 				implementation 'ch.qos.logback:logback-classic:1.2.3'
 
@@ -97,30 +93,27 @@ subprojects {
 
 				implementation 'org.flywaydb:flyway-core:6.0.3'
 
-				implementation 'org.yaml:snakeyaml:1.25'
 				implementation 'io.leangen.geantyref:geantyref:1.3.9'
 
-				implementation 'com.zaxxer:HikariCP:3.4.1'
 				implementation 'com.h2database:h2:1.4.199'
 				implementation 'org.postgresql:postgresql:42.2.8'
 
-//				implementation 'org.jboss.resteasy:resteasy-client-microprofile:4.3.1.Final'
-				implementation 'org.apache.cxf:cxf-rt-rs-mp-client:3.3.4'
-
 				implementation 'org.jboss.weld:weld-junit4:2.0.1.Final'
+				implementation 'org.hibernate.validator:hibernate-validator:6.1.0.Final'
 			}
 
 			compileOnly 'jakarta.annotation:jakarta.annotation-api'
 			compileOnly 'jakarta.enterprise:jakarta.enterprise.cdi-api'
-
 			compileOnly 'jakarta.persistence:jakarta.persistence-api'
 			compileOnly 'jakarta.validation:jakarta.validation-api'
-
 			compileOnly 'jakarta.ws.rs:jakarta.ws.rs-api'
 
 			compileOnly 'org.eclipse.microprofile.config:microprofile-config-api'
 			compileOnly 'org.eclipse.microprofile.rest.client:microprofile-rest-client-api'
 			compileOnly 'org.eclipse.microprofile.fault-tolerance:microprofile-fault-tolerance-api'
+			compileOnly 'org.eclipse.microprofile.health:microprofile-health-api'
+			compileOnly 'org.eclipse.microprofile.openapi:microprofile-openapi-api'
+			compileOnly 'org.eclipse.microprofile.metrics:microprofile-metrics-api:2.1.0'
 
 			compileOnly 'ascelion.mp-config:mp-config-ext-api'
 
@@ -133,6 +126,12 @@ subprojects {
 			testImplementation 'org.hamcrest:hamcrest-core:1.3'
 			testImplementation 'org.hamcrest:hamcrest-library:1.3'
 			testRuntimeOnly 'com.h2database:h2'
+		}
+
+		configurations {
+			implementation {
+				exclude group: 'org.slf4j', module: 'slf4j-jdk14'
+			}
 		}
 
 		jar {
@@ -150,10 +149,27 @@ subprojects {
 		}
 	}
 	plugins.withType( ApplicationPlugin ) {
-		mainClassName = 'ascelion.kalah.boot.Main'
+		mainClassName = 'ascelion.kalah.Main'
+
+		application {
+			applicationDefaultJvmArgs = [
+				'-server',
+				'-Djava.awt.headless=true',
+				'-XX:+UnlockExperimentalVMOptions',
+				'-XX:+UseCGroupMemoryLimitForHeap',
+				'-XX:InitialRAMFraction=2',
+				'-XX:MinRAMFraction=2',
+				'-XX:MaxRAMFraction=2',
+				'-XX:+UseG1GC',
+			]
+		}
 
 		run {
 			args '--config', 'application.profile=dev'
+
+			application.applicationDefaultJvmArgs.each {
+				jvmArgs it
+			}
 		}
 
 		plugins.withId( 'docker' ) {
